--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cached_network_image: ^3.4.1
   cupertino_icons: ^1.0.8
   dio: ^5.9.0
   easy_localization: ^3.0.8
@@ -37,17 +38,18 @@ dependencies:
   flutter_cache_manager: ^3.4.1
   flutter_screenutil: ^5.9.3
   flutter_secure_storage: ^9.2.4
+  flutter_svg: ^2.2.1
   get_it: ^8.2.0
   go_router: ^16.2.5
   injectable: ^2.5.2
   pretty_dio_logger: ^1.4.0
   shared_preferences: ^2.5.3
 dev_dependencies:
-  flutter_lints: ^5.0.0
   build_runner: any
-  injectable_generator: any
+  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
+  injectable_generator: any
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -59,29 +61,48 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/to/resolution-aware-images
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/to/asset-from-package
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/to/font-from-package
+  assets:
+    - assets/images/
+    - assets/icons/
+    # - assets/animations/
+    - assets/localization/ar-EG.json
+    - assets/localization/en-US.json
+
+  fonts:
+    - family: HanimationArabic
+      fonts:
+        - asset: assets/fonts/arabic/ArbFONTS-Hanimation_Arabic_Light.otf
+          weight: 300
+        - asset: assets/fonts/arabic/ArbFONTS-Hanimation_Arabic_Regular.otf
+          weight: 400
+        - asset: assets/fonts/arabic/ArbFONTS-Hanimation_Arabic_Medium.otf
+          weight: 500
+        - asset: assets/fonts/arabic/ArbFONTS-Hanimation_Arabic_SemiBold.otf
+          weight: 600
+        - asset: lib/core/common/assets/fonts/arabic/ArbFONTS-Hanimation_Arabic_Bold.otf
+          weight: 700
+#!=======================ANIMATIONS========================
+# flutter_assets:
+#   assets_path: assets/animations
+#   output_path: lib/core/theme
+#   filename: app_animations.dart
+#   ignore_comments: true
+#   field_prefix: null
+#   classname: AppAnimations
+#!=======================ICONS========================
+flutter_assets:
+  assets_path: assets/icons
+  output_path: lib/core/theme
+  filename: app_icons.dart
+  ignore_comments: true
+  field_prefix: null
+  classname: AppIcons
+
+#!=======================IMAGES========================
+# flutter_assets:
+#   assets_path: assets/images
+#   output_path: lib/core/theme
+#   filename: app_images.dart
+#   ignore_comments: true
+#   field_prefix: null
+#   classname: AppImages
