--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,8 +42,11 @@ dependencies:
   get_it: ^8.2.0
   go_router: ^16.2.5
   injectable: ^2.5.2
+  pinput: ^5.0.2
   pretty_dio_logger: ^1.4.0
   shared_preferences: ^2.5.3
+  shimmer: ^3.0.0
+  toastification: ^3.0.3
 dev_dependencies:
   build_runner: any
   flutter_lints: ^5.0.0
