--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   dio: ^5.9.0
   easy_localization: ^3.0.8
+  equatable: ^2.0.7
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.1
@@ -42,18 +43,22 @@ dependencies:
   get_it: ^8.2.0
   go_router: ^16.2.5
   injectable: ^2.5.2
+  json_annotation: ^4.9.0
+  logger: ^2.6.2
   pinput: ^5.0.2
   pretty_dio_logger: ^1.4.0
+  retrofit: ^4.7.3
   shared_preferences: ^2.5.3
   shimmer: ^3.0.0
   toastification: ^3.0.3
 dev_dependencies:
-  build_runner: any
+  build_runner: ^2.10.0
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
-  injectable_generator: any
-
+  injectable_generator: ^2.9.0
+  json_serializable: ^6.11.1
+  retrofit_generator: ^10.0.6
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
