--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   get_it: ^8.2.0
   go_router: ^16.2.5
   injectable: ^2.5.2
+  internet_connection_checker: ^3.0.1
   json_annotation: ^4.9.0
   logger: ^2.6.2
   pinput: ^5.0.2
