--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: study_app
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -41,9 +41,8 @@ dependencies:
   flutter_secure_storage: ^9.2.4
   flutter_svg: ^2.2.1
   get_it: ^8.2.0
-  go_router: ^16.2.5
+  go_router: ^16.3.0
   injectable: ^2.5.2
-  internet_connection_checker: ^3.0.1
   json_annotation: ^4.9.0
   logger: ^2.6.2
   pinput: ^5.0.2
@@ -64,7 +63,6 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -82,13 +80,13 @@ flutter:
       fonts:
         - asset: assets/fonts/arabic/ArbFONTS-Hanimation_Arabic_Light.otf
           weight: 300
-        - asset: assets/fonts/arabic/ArbFONTS-Hanimation_Arabic_Regular.otf
-          weight: 400
-        - asset: assets/fonts/arabic/ArbFONTS-Hanimation_Arabic_Medium.otf
-          weight: 500
-        - asset: assets/fonts/arabic/ArbFONTS-Hanimation_Arabic_SemiBold.otf
-          weight: 600
-        - asset: lib/core/common/assets/fonts/arabic/ArbFONTS-Hanimation_Arabic_Bold.otf
+        # - asset: assets/fonts/arabic/ArbFONTS-Hanimation_Arabic_Regular.otf
+        #   weight: 400
+        # - asset: assets/fonts/arabic/ArbFONTS-Hanimation_Arabic_Medium.otf
+        #   weight: 500
+        # - asset: assets/fonts/arabic/ArbFONTS-Hanimation_Arabic_SemiBold.otf
+        #   weight: 600
+        - asset: assets/fonts/arabic/ArbFONTS-Hanimation_Arabic_Bold.otf
           weight: 700
 #!=======================ANIMATIONS========================
 # flutter_assets:
@@ -106,7 +104,6 @@ flutter_assets:
   ignore_comments: true
   field_prefix: null
   classname: AppIcons
-
 #!=======================IMAGES========================
 # flutter_assets:
 #   assets_path: assets/images
