--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,11 +43,12 @@ dependencies:
   get_it: ^8.2.0
   go_router: ^16.3.0
   injectable: ^2.5.2
+  internet_connection_checker_plus: ^2.9.0
   json_annotation: ^4.9.0
   logger: ^2.6.2
   pinput: ^5.0.2
   pretty_dio_logger: ^1.4.0
-  retrofit: ^4.7.3
+  retrofit: ^4.8.0
   shared_preferences: ^2.5.3
   shimmer: ^3.0.0
   toastification: ^3.0.3
@@ -104,6 +105,7 @@ flutter_assets:
   ignore_comments: true
   field_prefix: null
   classname: AppIcons
+
 #!=======================IMAGES========================
 # flutter_assets:
 #   assets_path: assets/images
